# SimpleDiffusion

./: .gitignore  Makefile  README.md  backup.py  flake.nix  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: check.yml
LatentDiffusion/: main.py  util.py  vae.py
LatentDiffusion/VAE/: vae.py
LatentDiffusion/configs/: train_fm.yaml  train_ldm.yaml  train_pixel_cm.yaml  train_vae.yaml
LatentDiffusion/data/: data_wrapper.py
LatentDiffusion/models/: ae_module.py  unet.py
LatentDiffusion/schedulers/: ddpm.py  flowmatching.py
LatentDiffusion/vae/lightning_logs/version_12/: events.out.tfevents.1715177862.eez087  hparams.yaml
UnconditionalDiffusion/: experiment.pptx  experiments.md  expriments.md  hp_driver.py  main.py  util.py
nix/: shell.nix
